@@ -1,4 +1,4 @@
-﻿// <copyright file="OSUtilities.cs" company="Mark Final">
+// <copyright file="OSUtilities.cs" company="Mark Final">
 //  Opus
 // </copyright>
 // <summary>Opus Core</summary>
@@ -13,8 +13,10 @@ namespace Opus.Core
             {
                 if (State.RunningMono)
                 {
-                    // TODO: need to figure out a way of doing this
-                    return false;
+					// TODO: System.Environment.GetEnvironmentVariable("HOSTTYPE") returns null instead of something like "x86_64"
+					// TODO: this is a hack and a big assumption that you're not running a 32-bit OS on a 64-bit processor
+					bool is64Bit = (8 == System.IntPtr.Size);
+					return is64Bit;
                 }
                 else
                 {
